--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.25.1",
+    "axios": "^1.9.0",
     "next": "15.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
